# sjtu-oracle-deciphering

./: .gitignore
SRILM/: Makefile
corpus/src/: count-char  count-char.cpp  gen-context  generate-map  generate-map.cpp  preprocess  stats  stats.cpp  test
corpus/src/srilm/: @  Debug.h  Dependencies.i686-m64  FNgramLM.cc  FNgramStats.cc  LHash.cc  Makefile.am  Makefile.in  NgramStats.cc  SRILMversion.h  config.status  configure  configure.in  configure.scan  makefile  ngram.cc  option.c  option.h  test.cpp
corpus/src/srilm/.deps/: ngram.Po
corpus/src/srilm/autom4te.cache/: output.0  requests  traces.0  traces.1
mysrilm/: Makefile
mysrilm/common/: Makefile.machine.i686-m64
mysrilm/flm/src/: Dependencies.i686-m64
mysrilm/include/: TextStats.h
mysrilm/lattice/src/: Dependencies.i686-m64
mysrilm/lm/src/: Dependencies.i686-m64  TextStats.cc  haizhao@144.214.20.231  ngram-multi.cc  ngram.cc  test.cpp
mysrilm/lm/test/output/: google-ngrams.i686-m64.stderr  make-ngram-pfsg.i686-m64.stderr  make-ngram-pfsg.i686-m64.stdout  merge-batch-counts.i686-m64.stderr  nbest-optimize-bleu.i686-m64.stderr  ngram-binary.i686-m64.stdout  ngram-server.i686-m64.stdout
