#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.68])
AC_INIT(automake, 0.1)
#AC_CONFIG_SRCDIR([MultiwordVocab.h])
AM_INIT_AUTOMAKE(automake,   0.1) 
AC_PROG_CXX 
AC_OUTPUT([Makefile]) 

### Checks for programs.
#AC_PROG_CXX
AC_PROG_CC
#
## Checks for libraries.
#
## Checks for header files.
#AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h locale.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/param.h sys/socket.h unistd.h])
#
## Checks for typedefs, structures, and compiler characteristics.
#AC_HEADER_STDBOOL
#AC_C_INLINE
#AC_TYPE_SIZE_T
#
## Checks for library functions.
#AC_FUNC_ERROR_AT_LINE
#AC_FUNC_FORK
#AC_FUNC_FSEEKO
#AC_FUNC_MALLOC
#AC_FUNC_MKTIME
#AC_FUNC_REALLOC
#AC_FUNC_STRTOD
#AC_CHECK_FUNCS([alarm gethostbyname inet_ntoa memmove memset rint setlocale socket sqrt strchr strdup strerror strrchr strtol])
#
#AC_CONFIG_FILES([Makefile1])
#AC_OUTPUT
